<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalles">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="480dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/detalle" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/titulo_tabla1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="200px"
                    android:layout_height="wrap_content"
                    android:background="@drawable/marcotabla"
                    android:text="@string/fecha"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="250px"
                    android:layout_height="wrap_content"
                    android:background="@drawable/marcotabla"
                    android:text="@string/tipo"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="200px"
                    android:layout_height="wrap_content"
                    android:background="@drawable/marcotabla"
                    android:text="@string/montot"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:fillViewport="false"
            android:paddingBottom="20dp"
            android:scrollbarDefaultDelayBeforeFade="@android:integer/config_longAnimTime">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tabla1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <TableLayout
            android:id="@+id/tabla2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="volver"
            android:text="@string/volver" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
